# tocreatedata

./: .gitignore  FILE_GUIDE.md  MECHANISTIC_RUN_STATUS.md  PROJECT_CONTEXT_REPORT.md  README.md  fix_hpc_torch.sh  pyproject.toml  report.md  run_all_axes_hpc_conda.sh  run_overnight_hpc_fairness.sh  run_overnight_hpc_fairness_conda.sh  run_pro_human_mechanistic_hpc.sh  setup_hpc.sh  setup_hpc_conda.sh  temp_cache.md  update.sh
data/: direction_spec.sample.json  eval_prompts.txt  lexicon.txt  seed_pairs.sample.jsonl
data/axes/: accountability.sample.jsonl  boundaries.sample.jsonl  conflict_resolution.sample.jsonl  empathy.sample.jsonl  fairness.sample.jsonl  feedback.sample.jsonl  inclusion.sample.jsonl  integrity.sample.jsonl  leadership.sample.jsonl  learning.sample.jsonl  ownership.sample.jsonl  privacy.sample.jsonl  respect.sample.jsonl  safety.sample.jsonl  trust.sample.jsonl
sbatch/: README.md  build_token_shortlist.sbatch  extract_mechanistic_directions.sbatch  merge_mechanistic_sequences.sbatch  mine_all_axes.sbatch  mine_fairness.sbatch  mine_mechanistic_dataset.sbatch  mine_pro_human_sequences_shard.sbatch  score_pairs.sbatch  setup_env.sbatch
scripts/: build_dataset_views.py  build_token_shortlist.py  export_mechanistic_snapshot.sh  extract_mechanistic_directions.py  merge_mechanistic_sequences.py  mine_candidates.py  mine_mechanistic_dataset.py  mine_pro_human_sequences.py  report_mechanistic_progress.py  score_seed_pairs.py  summarize_mechanistic_results.py
src/humanity_direction/: __init__.py  activations.py  config.py  data.py  direction.py  pairs.py  (+4 more)
