[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanity-direction"
version = "0.1.0"
description = "Research scaffold for learning and mining a pro-human steering direction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "safetensors>=0.4.5",
  "torch>=2.2.0",
  "transformers>=4.44.0",
]

[tool.setuptools.packages.find]
where = ["src"]
